AuthCore implementing v1.0, I have a problem with "IllegalArgumentException: Plugin cannot be null" caused by /register command. Because my DDamD.plugin is null at this moment. I'll solve it.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,15 @@
-name: Dungeon Dungeon And More Dungeons
+name: Dungeon-Dungeon-And-More-Dungeons
 version: '${project.version}'
 main: kz.blazingfast.minecraft.dungeondungeonandmoredungeons.DungeonDungeonAndMoreDungeons
 api-version: 1.19
+
+commands:
+  register:
+    aliases:
+      - reg
+    usage: /reg <password>
+
+  login:
+    aliases:
+      - l
+    usage: /l <password>
