logout() and vegetableMode() added, also now we can easily edit our database connection credentials with config.yml. Refactoring used.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,9 +7,11 @@ commands:
   register:
     aliases:
       - reg
-    usage: /reg <password>
 
   login:
     aliases:
       - l
-    usage: /l <password>
+
+  logout:
+    aliases:
+      - lout
