subscribe(), unsubscribe() to the event - Observer Pattern implementation. Also fixed VegetableMode - block movement and action.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -15,3 +15,13 @@ commands:
   logout:
     aliases:
       - lout
+  event:
+    description: event command
+
+  subscribe:
+    aliases:
+      - sub
+
+  unsubscribe:
+    aliases:
+      - unsub
