--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,10 @@
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
+        <repository>
+            <id>screaming-repo</id>
+            <url>https://repo.screamingsandals.org</url>
+        </repository>
     </repositories>
 
     <dependencies>
