--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -18,12 +18,11 @@ commands:
   event:
     description: event command
 
-  subscribe:
-    aliases:
-      - sub
-
-  unsubscribe:
-    aliases:
-      - unsub
-
   shop:
+    description: shop
+
+  game:
+    description: game event commands
+
+  teamchat:
+    description: team chat command
